updated style link

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;600&family=Mukta:wght@200;400&family=Quicksand:wght@300;400;500&family=Roboto:wght@100;300;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="http://localhost:3000/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://mysocialapp-2q9l.onrender.com/style.css"
+    />
     <title>Social App</title>
   </head>
   <body>
