--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://mysocialapp-2q9l.onrender.com/style.css"
+      href="https://my-social-app-cso6.onrender.com/style.css"
     />
     <title>Social App</title>
   </head>
