some styles and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
       rel="stylesheet"
       href="https://my-social-app-cso6.onrender.com/style.css"
     />
-    <title>Social App</title>
+    <link rel="icon" type="image/x-icon" href="/image/favicon.png" />
+
+    <title>Friends - Social App</title>
   </head>
   <body>
     <div id="root"></div>
